feat(design) : change design and add empty message

--- a/popup.html
+++ b/popup.html
@@ -21,7 +21,7 @@
   </head>
   <body>
     <div class="popup">
-      <h1>Watching</h1>
+      <h1 class="popup-title">Watching...</h1>
       <hr />
       <div id="anime-list" class="list"></div>
     </div>
